hphp/hack/test/typecheck/reactive/rx_append2.php.like_types.exp
File "rx_append2.php", line 4, characters 3-6:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "rx_append2.php", line 3, characters 24-25:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
