hphp/hack/test/typecheck/reactive/rx_append2.php
<?hh

function a(Set<int> $a)[]: void {
  $a[] = 1;
}
